--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build and push Docker image
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          image: githubaction  # ไม่ต้องใส่ star01234 ซ้ำ
+          image: gt2  # ไม่ต้องใส่ star01234 ซ้ำ
           registry: ghcr.io/star01234
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
